--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,15 +6,20 @@
     	<meta name="keywords" content="one, two, three">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<title>Welcome</title>
+		<title>Log In</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<h1>best social media site evr</h1>
-		<a href="/login">Log In</a>
-		<a href="/signup">Sign Up</a>
+		<h1>log in page</h1>
+        <form method="POST" action="/login">
+            <label for="email">Email</label>
+            <input id="email" name="email" type="email" placeholder="Enter Email">
+            <label for="password">Password</label>
+            <input id="password" name="password" type="password" placeholder="Enter Password">
+            <input type="submit" value="Submit">
+        </form>
 		<script type="text/javascript" src="js/index.js"></script>
 	</body>
 </html>
