--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 		<h1>sign up page</h1>
-        <form method="POST" action="/login">
+        <form method="POST" action="/signup">
             <label for="email">Name</label>
             <input id="name" required name="name" type="text" placeholder="Enter Name">
             <label for="email">Email</label>
