--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -13,13 +13,18 @@
 	</head>
 	<body>
 		<h1>sign up page</h1>
+		<% if(locals.messages.errors) { %>
+			<% for (let i = 0; i < messages.errors.length; i++) { %>
+				<p><%= messages.errors[i].msg%></p>
+			<% } %>
+		<% } %>
         <form method="POST" action="/signup">
-            <label for="name">Name</label>
-            <input id="name" required name="name" type="text" placeholder="Enter Name">
+            <label for="userName">Username</label>
+            <input id="userName" required name="userName" type="text" placeholder="Enter Username">
             <label for="email">Email</label>
             <input id="email" required name="email" type="email" placeholder="Enter Email">
-			<label for="confirmEmail">Email</label>
-            <input id="confirmEmail" required name="confirmEmail" type="email" placeholder="Confirm Email">
+			<label for="confirmPassword">Password</label>
+            <input id="confirmPassword" required name="confirmPassword" type="password" placeholder="Confirm Password">
             <label for="password">Password</label>
             <input id="password" required name="password" type="password" placeholder="Enter Password">
             <button type="submit">Submit</button>
