--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -6,15 +6,14 @@
     	<meta name="keywords" content="one, two, three">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<title><%= user.userName %>'s Profile</title>
+		<title>Feed</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<h1>welcome to <%= user.userName %>'s profile</h1>
-		<a href="/logout">Logout</a>
-		<a href="/feed">Feed</a>
+		<h1>best social media site evr</h1>
+		<a href="/profile">Go To My Profile</a>
 		<script type="text/javascript" src="js/index.js"></script>
 	</body>
 </html>
