--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -9,11 +9,20 @@
 		<title>Feed</title>
 
 		<!-- external CSS link -->
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/feed.css">
 	</head>
 	<body>
-		<h1>best social media site evr</h1>
-		<a href="/profile">Go To My Profile</a>
+        <header>
+            <h1>feed</h1>
+		    <a href="/profile">Go To My Profile</a>
+        </header>
+        <!-- use this for ejs stuff later -->
+        <section id="posts">
+        <div class="post">
+            <div class="post-title">not a test</div>
+            <img class="post-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/75/Kreta_%28GR%29%2C_Rethymno%2C_K%C3%BCchenutensilien_--_2023_--_8185.jpg/1920px-Kreta_%28GR%29%2C_Rethymno%2C_K%C3%BCchenutensilien_--_2023_--_8185.jpg">
+        </div>
+        </section>
 		<script type="text/javascript" src="js/index.js"></script>
 	</body>
 </html>
