added post pages, added likes

--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -19,10 +19,10 @@
         <!-- use this for ejs stuff later -->
         <section id="posts">
             <% posts.forEach(post => { %>
-            <div class="post">
+            <a class="post" href="/post/<%= post._id %>">
                 <div class="post-title"><%= post.title %></div>
                 <img class="post-image" src="<%= post.image %>">
-            </div>
+            </a>
             <% }); %>
         </section>
 		<script type="text/javascript" src="js/index.js"></script>
