--- a/views/post.ejs
+++ b/views/post.ejs
@@ -30,6 +30,14 @@
             <button type="submit">Like</button>
         </form>
         <img id="image" src="<%= post.image %>">
+        <form method="POST" action="/post/addComment/<%= post._id %>">
+            <input type="text" name="commment" required>
+            <button type="submit">Post Comment</button>
+        </form>
+        <% for(let i = post.comments.length-1; i >= 0; i--){ %>
+            <h5> <%= post.comments[i].user.userName %></h5>
+            <p> <%= post.comments[i].comment %></p>
+        <% } %>
 		<script type="text/javascript" src="js/index.js"></script>
 	</body>
 </html>
